新增dump类用于层序奔溃时获取堆栈信息

--- a/HpcLabs/HpcLabs.vcxproj
+++ b/HpcLabs/HpcLabs.vcxproj
@@ -92,6 +92,7 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <OpenMPSupport>true</OpenMPSupport>
+      <AdditionalOptions>/Zc:twoPhase- %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -159,6 +160,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CpuID.cpp" />
+    <ClCompile Include="dbg.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="TimeClock.cpp" />
   </ItemGroup>
