--- a/HpcLabs/HpcLabs.vcxproj.filters
+++ b/HpcLabs/HpcLabs.vcxproj.filters
@@ -1,57 +1,47 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="源文件">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="头文件">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="资源文件">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
-    <Filter Include="Toolbox">
-      <UniqueIdentifier>{c9827412-5c18-4ba0-b2a4-8868f6bb20f4}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Toolbox\profiler">
-      <UniqueIdentifier>{440e094c-ad71-45e4-a97a-73623a6220e6}</UniqueIdentifier>
-    </Filter>
+    <CudaCompile Include="MatrixBase.h">
+      <Filter>matrix</Filter>
+    </CudaCompile>
+    <CudaCompile Include="main.cpp" />
+    <CudaCompile Include="MatrixBase.cpp">
+      <Filter>matrix</Filter>
+    </CudaCompile>
+    <CudaCompile Include="kernel.cu">
+      <Filter>kernel</Filter>
+    </CudaCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Maxtrix.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="CpuID.h">
-      <Filter>Toolbox</Filter>
-    </ClInclude>
-    <ClInclude Include="dbg.h">
-      <Filter>Toolbox</Filter>
-    </ClInclude>
+    <ClInclude Include="freshman.h" />
     <ClInclude Include="profiler\function.h">
-      <Filter>Toolbox\profiler</Filter>
+      <Filter>profile</Filter>
     </ClInclude>
     <ClInclude Include="profiler\Profiler.h">
-      <Filter>Toolbox\profiler</Filter>
+      <Filter>profile</Filter>
+    </ClInclude>
+    <ClInclude Include="kernel.cuh">
+      <Filter>kernel</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="CpuID.cpp">
-      <Filter>Toolbox</Filter>
-    </ClCompile>
-    <ClCompile Include="dbg.cpp">
-      <Filter>Toolbox</Filter>
-    </ClCompile>
+    <Filter Include="matrix">
+      <UniqueIdentifier>{ccb713e7-4911-4c18-be22-aa75a2124b7b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="profile">
+      <UniqueIdentifier>{1c08822b-f870-48f0-b982-35172f3d0cd3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="kernel">
+      <UniqueIdentifier>{b671832b-ad75-42c3-8842-c6dfb71727a7}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
     <ClCompile Include="profiler\function.cpp">
-      <Filter>Toolbox\profiler</Filter>
+      <Filter>profile</Filter>
     </ClCompile>
     <ClCompile Include="profiler\Profiler.cpp">
-      <Filter>Toolbox\profiler</Filter>
+      <Filter>profile</Filter>
     </ClCompile>
+    <ClCompile Include="freshman.cpp" />
   </ItemGroup>
 </Project>
